# Algorithm-Explainer-Code-Assistant

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: architecture.md
scripts/: ingest_docs.py  rebuild_index.py  run_eval.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/embeddings/: __init__.py  factory.py
src/evaluation/: __init__.py  eval_runner.py  metrics.py
src/ingestion/: __init__.py  chunker.py  image_loader.py  loaders.py  parser.py  pipeline.py
src/llm/: __init__.py  factory.py  prompts.py  qa_chain.py
src/services/: __init__.py  answer_service.py  citation_service.py
src/utils/: files.py  ids.py  logging.py
src/vectordb/: __init__.py  chroma_store.py  pinecone_store.py  retriever.py
tests/: conftest.py  test_answer_service.py  test_chunking.py  test_ingestion.py  test_prompting.py  test_retrieval.py
